# alum

./: .gitignore  Cargo.toml  LICENSE  README.md  temp.cpp
.github/workflows/: ci.yml  rust.yml
benches/: benchmarks.rs
examples/: README.md  adaptor.rs  basic_adaptor.rs  common.rs  decimate.rs  hello_adaptor.rs  load_obj.rs  primitives.rs  property.rs  render.rs  subdiv.rs  wireframe_primitives.rs  wireframe_render.rs
src/: adaptor.rs  alum_glam.rs  check.rs  collapse.rs  create.rs  edit.rs  element.rs  error.rs  history.rs  iterator.rs  lib.rs  macros.rs  math.rs  mesh.rs  obj.rs  primitive.rs  property.rs  queue.rs  status.rs  subdiv.rs  subidv.rs  topol.rs  triangulate.rs  use_glam.rs  vector.rs
src/decimate/: edge_length.rs  hausdorff.rs  heap.rs  mod.rs  quadric.rs  queue.rs
src/subdiv/: catmull.rs  loop_subd.rs  mod.rs  sqrt3.rs
