[package]
name = "alum"
version = "0.5.2"
edition = "2021"
authors = ["Ranjeeth Mahankali <ranjeethmahankali@gmail.com>"]
description = "Halfedge based polygon mesh library."
readme = "README.md"
repository = "https://github.com/ranjeethmahankali/alum"
license = "GPL-3.0-only"
keywords = ["mesh", "polygon", "halfedge", "geometry", "topology"]
categories = ["mathematics", "graphics", "rendering"]

[dependencies]
glam = { version = "0.29.2", optional = true }
tobj = { version = "4.0.2", features = ["use_f64"] }

[features]
default = ["use_glam", "subdiv", "decimate"]
use_glam = ["dep:glam"]
subdiv = []
decimate = []

[dev-dependencies]
arrayvec = "0.7.6"
three-d = "0.17.0"

[[example]]
name = "common"
crate-type = ["staticlib"]