[package]
name = "alum"
version = "0.6.3"
edition = "2024"
authors = ["Ranjeeth Mahankali <ranjeethmahankali@gmail.com>"]
description = "Halfedge based polygon mesh library."
readme = "README.md"
repository = "https://github.com/ranjeethmahankali/alum"
license = "BSD-3-Clause "
keywords = ["mesh", "polygon", "halfedge", "geometry", "topology"]
categories = ["mathematics", "graphics", "rendering"]
exclude = ["assets/", "examples/"]

[dependencies]
tobj = { version = "4.0.2", features = ["use_f64"] }

[features]
default = ["subdiv", "decimate"]
subdiv = []
decimate = []

[dev-dependencies]
arrayvec = "0.7.6"
three-d = {version = "0.17.0", features = ["egui-gui"]}
criterion = { version = "0.7", features = ["html_reports"] }

[[example]]
name = "common"
crate-type = ["staticlib"]

[[bench]]
name = "benchmarks"
harness = false
